3.31-7  Add deff="replace" as an option for svyratio (for Chris Webb)

3.31-6  Make database-backed svydesign work with *no* design variables  (for Anthony Damico and Guilherme Jacob)

3.31-5  predict.svyglm() uses object$xlevels and object$contrasts and so should be able to
        guess the right factor levels when they aren't supplied in newdata= (for @thosjleeper)

	fix return() without parentheses in svykm.R

3.31-4	svyciprop(,method="like") and confint.svyglm(method="like") work even when the 
        design effect is large. 

3.31-3  svyciprop has method="xlogit" that reproduces what SUDAAN and SPSS give. (for Rex Dwyer)

	Added reference for svylogrank

	Added example from YRBS for software comparison

	Copied some names from NEWS into THANKS

3.31-2	explicitly dropping dimensions on a 1x1 matrix

3.31-1	Allow for incompatible change in output of CompQuadForm::farebrother()  

3.31	update isIdValid() to dbIsValid() for DBI changes.

	explicitly :: or import ALL THE THINGS.

	mse option for svrepdesign.character and svyrepdesign.imputationList was ignored (Antony Damico)

	confint works on output of svycontrast (for Michael Laviolette)

	denominator df fixed in confint.svyglm (Joey Morris)

	svyboxplot rule for which lower-tail points are outliers was wrong (David Collins)

	calibrate() with variable-specific epsilons and zero sample totals didn't work (Alex Kowarik)

	document that regTermTest(method="LRT") can't handle models with a start= argument
	and document how to use anova.svyglm instead. (Brad Biggerstaff)

	update tests output for new formatting in current R.


3.30-4  svypredmeans() does the same things (together with svycontrast()) as
        as PREDMARG in SUDAAN (for Thomas Yokota and Anthony Damico)

3.30-4  confint.svystat was handling denominator degrees of freedom wrongly
	for the Wald method (Jared Smith)

3.30-3  vcov.svrepstat does more sensible things when covariances aren't