@@ -12,7 +12,8 @@ export(svydesign, svrepdesign, as.svrepdesign,twophase, postStratify,
        make.calfun, cal.linear, cal.raking, cal.logit, svycdf, svykappa, svykm,
        svyolr, svycoplot, svyloglin, make.panel.svysmooth, dotchart, subbootweights,
        svyciprop, svyttest, marginpred, twophasevar, twophase2var, ppsmat, HR, unwtd.count,
-       svyfactanal, svypredmeans, svyprcomp, trimWeights,stratsample,svylogrank,svyranktest,svystandardize)
+       svyfactanal, svypredmeans, svyprcomp, trimWeights,stratsample,svylogrank,svyranktest,svystandardize,
+       psrsq)
 
 S3method(svyloglin,survey.design)
 S3method(svyloglin,svyrep.design)
@@ -449,3 +450,7 @@ S3method(svyranktest,survey.design)
 S3method(svyranktest,svyrep.design)
 S3method(svyranktest,DBIsvydesign)
 S3method(svyranktest,ODBCsvydesign)
+
+S3method(psrsq,glm)
+S3method(psrsq,svyglm)
+
